Fix latest arc width on mobile

--- a/components/LatestArc/LatestArc.module.scss
+++ b/components/LatestArc/LatestArc.module.scss
@@ -2,5 +2,7 @@
 
 .latestArc {
     max-width: 800px;
+    padding: 16px;
+    img {width: 100%;}
     margin: 0 auto;
 }
